Fixes to height and width of backstretch images in gallery

--- a/wp-content/themes/hmr-theme/assets/css/less/app.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/app.less
@@ -25,6 +25,12 @@
 	}
 }
 
+.page-template-template-portfolio {
+	.backstretch img {
+		min-width:100%;
+		min-height: 100%;
+	}
+}
 /* ==========================================================================
    Bootstrap & Stock Bootstrap/Roots Theme Setup
    ========================================================================== */
